--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
   ],
   "scripts": {
     "build": "tsc && vite build",
-    "format": "prettier --ignore-path .gitignore --loglevel=silent --write \"**/*.+(js|ts|json)\"",
-    "format:check": "prettier --check \"**/*.+(js|ts|json)\"",
-    "lint": "eslint --ext .js,.ts .",
+    "format": "prettier --ignore-path .gitignore --loglevel=silent --write \"**/*.+(js|ts|json)\"  \"!dist/*\"",
+    "format:check": "prettier --check \"**/*.+(js|ts|json)\" \"!dist/*\"",
+    "lint": "eslint --ext .js,.ts .  --ignore-pattern \"dist/*\"",
     "test": "jest",
     "test:cov": "jest --coverage",
     "test:watch": "jest --watchAll",
