--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
   },
   "dependencies": {
     "bech32": "^2.0.0",
+    "create-hash": "^1.2.0",
     "secp256k1": "^5.0.0"
   },
   "devDependencies": {
+    "@types/create-hash": "^1.2.3",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.5.0",
     "@types/secp256k1": "^4.0.3",
