--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "bech32": "^2.0.0",
+    "buffer": "^6.0.3",
     "create-hash": "^1.2.0",
     "secp256k1": "^5.0.0"
   },
