--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "bech32": "^2.0.0",
     "buffer": "^6.0.3",
     "create-hash": "^1.2.0",
+    "level": "^8.0.0",
     "secp256k1": "^5.0.0"
   },
   "devDependencies": {
