--- a/package.json
+++ b/package.json
@@ -57,12 +57,23 @@
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.3",
     "jest": "^29.6.2",
+    "lint-staged": "^15.2.0",
     "prettier": "^2.7.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-dts": "^3.5.2"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "bash -c 'npm run lint'",
+      "bash -c 'npm run types:check'"
+    ],
+    "*.{ts,yaml,json}": [
+      "bash -c 'npm run format'"
+    ]
   }
 }
