--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "strictNullChecks": false
   },
   "include": ["src"],
   "exclude": ["**/*.spec.ts", "node_modules/**/*"]
