--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,6 +38,10 @@ jobs:
           command: curl --fail -X GET http://localhost:8094/regtest/api/blocks/tip/height
       - name: Run unit tests
         run: npm run test
+        env:
+          BITCOIN_RPC_USER: alice
+          BITCOIN_RPC_PASSWORD: password
+          BITCOIN_RPC_HOST: localhost:18443
       - name: Fetch esplora logs
         if: always()
         run: docker-compose -f "./test/helpers/docker-compose.yaml" logs esplora
