--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "tiny-secp256k1": "^2.2.3"
   },
   "devDependencies": {
+    "@types/bip38": "^3.1.2",
     "@types/create-hash": "^1.2.3",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.5.0",
