feat: use monorepo architecture to manage different packages
Signed-off-by: Anmol Sharma <anmolsharma0234@gmail.com>

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,4 +30,4 @@ jobs:
         if: success() || failure()
         run: npm run lint
       - name: Run Typescript Compilation Check
-        run: npm run types:check
+        run: npm run types:check --ws
