--- a/packages/esplora/tsconfig.build.json
+++ b/packages/esplora/tsconfig.build.json
@@ -2,7 +2,8 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "declaration": false,
-    "outDir": "../../dist/level"
+    "outDir": "../../dist/level",
+    "noEmit": false
   },
   "include": ["src/**/*"],
   "exclude": ["**/*spec.ts"]
