fix: correct path config in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,11 @@
       "@silent-pay/wallet": ["./packages/wallet/src"]
     }
   },
-  "include": ["src"],
+  "include": [
+    "packages/core/src",
+    "packages/esplora/src",
+    "packages/level/src",
+    "packages/wallet/src"
+  ],
   "exclude": ["**/*.spec.ts", "node_modules/**/*"]
 }
