chore: update tsconfig and package.json for core package
Signed-off-by: Anmol Sharma <anmolsharma0234@gmail.com>

--- a/packages/core/tsconfig.build.json
+++ b/packages/core/tsconfig.build.json
@@ -1,9 +1,10 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "declaration": false,
-    "outDir": "../../dist/core",
-    "noEmit": false
+    "outDir": "dist",
+    "noEmit": false,
+    "declaration": true,
+    "sourceMap": false
   },
   "include": ["src/**/*"],
   "exclude": ["**/*spec.ts"]
