--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@silent-pay/core",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "A library for bitcoin silent payments. This package includes all core functions needed to implement silent payments.",
-  "main": "dist/core/index.js",
-  "types": "dist/core/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist/core"
   ],
@@ -39,5 +39,14 @@
   "devDependencies": {
     "@types/create-hash": "^1.2.3",
     "@types/secp256k1": "^4.0.3"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
   }
 }
