--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "./packages/*"
   ],
   "scripts": {
+    "build": "npm run build --ws",
+    "test": "npm test --ws",
+    "clean": "rm -rf dist packages/*/dist",
     "format": "prettier --ignore-path .gitignore --loglevel=silent --write \"**/*.+(js|ts|json)\"  \"!dist/*\"",
     "format:check": "prettier --check \"**/*.+(js|ts|json)\" \"!dist/*\"",
     "lint": "eslint --ext .js,.ts .  --ignore-pattern \"dist/*\""
