--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@silent-pay/core",
-  "version": "0.0.1",
+  "version": "0.0.5",
   "description": "A library for bitcoin silent payments. This package includes all core functions needed to implement silent payments.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist/core"
+    "dist"
   ],
   "author": "Anmol Sharma",
   "license": "MIT",
@@ -13,7 +13,7 @@
   "scripts": {
     "test": "jest",
     "test:cov": "jest --coverage",
-    "build": "tsc -p tsconfig.build.json",
+    "build": "tsup src/index.ts --format cjs,esm --dts",
     "types:check": "tsc --noemit --p tsconfig.build.json"
   },
   "repository": {
