--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
     "sourceMap": true,
+    "allowJs": true,
+    "checkJs": false,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -37,7 +39,8 @@
     "packages/core/src",
     "packages/esplora/src",
     "packages/level/src",
-    "packages/wallet/src"
+    "packages/wallet/src",
+    "helpers"
   ],
   "exclude": ["**/*.spec.ts", "node_modules/**/*"]
 }
