--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@silent-pay/core",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "A library for bitcoin silent payments. This package includes all core functions needed to implement silent payments.",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
@@ -46,7 +47,8 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
     }
   }
 }
